Finalizando a parte de JPA
